# QontrolPanel

./: AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/: TRANSLATIONS.md
.github/workflows/: build.yml  clear-artifacts.yml  compile_translations.yml  release.yml  update-headsetcontrol.yml  update_translations.yml
cmake/: languages.cmake
docs/: ARCHITECTURE.md  BUILD.md  HEADSETCONTROL_INTEGRATION.md  HID_DEVICES.md
i18n/: QontrolPanel_de.ts  QontrolPanel_en.ts  QontrolPanel_es.ts  QontrolPanel_fr.ts  QontrolPanel_it.ts  QontrolPanel_ja.ts  QontrolPanel_ko.ts  QontrolPanel_pl.ts  QontrolPanel_pt_BR.ts  QontrolPanel_ru.ts  QontrolPanel_sl.ts  QontrolPanel_zh_CN.ts
i18n_compiled/: QontrolPanel_de.qm  QontrolPanel_en.qm  QontrolPanel_es.qm  QontrolPanel_fr.qm  QontrolPanel_it.qm  QontrolPanel_ja.qm  QontrolPanel_ko.qm  QontrolPanel_pl.qm  QontrolPanel_pt_BR.qm  QontrolPanel_ru.qm  QontrolPanel_sl.qm  QontrolPanel_zh_CN.qm  README.md  translation_progress.json
include/: audiomanager.h  headsetcontrolbridge.h  headsetcontrolmonitor.h  trayiconprovider.h  usersettings.h
qml/: DonatePopup.qml  Main.qml  PowerConfirmationWindow.qml  SettingsWindow.qml  SystemTray.qml
qml/SettingsPane/: ConsolePane.qml  DebugPane.qml  DeviceRenamingPane.qml  GeneralPane.qml  HeadsetControlPane.qml  UpdatePane.qml
qml/Singletons/: Constants.qml  Context.qml  LogBridge.qml
src/: audiomanager.cpp  headsetcontrolbridge.cpp  headsetcontrolmonitor.cpp  panelengine.cpp  trayiconprovider.cpp  updater.cpp  usersettings.cpp
